bug fix: array out of bound error because of trying to pin shapes which is outside grid(cross the upper bound)
--HG--
branch : dev

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -101,7 +101,7 @@ from http://fxexperience.com/2011/12/styling-fx-buttons-with-css/
     -fx-font-size: 20px;
 }
 
-.greenButton:hover {
+.greenButton:hover, .greenButton:focused,{
     -fx-background-color:
         linear-gradient(#f0ff35, #a9ff00),
         radial-gradient(center 50% -40%, radius 200%, #d8fd80 45%, #a5e532 50%);
